--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="inner">
         <a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""/></a>
         <h1><strong><span style="font-size: 100px">Vali<br> Tawosi</span></strong><br/>
-            Sr. Ass. AI Researcher <br><a href="https://www.jpmorgan.com/technology/artificial-intelligence">@JP Morgan Chase & Co</a></h1>
+            AI Researcher <br><a href="https://www.jpmorgan.com/technology/artificial-intelligence">@J.P.Morgan Chase & Co</a></h1>
     </div>
 </header>
 
@@ -26,7 +26,7 @@
         <!--    <h2>On January 2019,</h2>-->
         <!--</header>-->
         <div class="myindent">
-            <p>I am a Senior Associate AI Researcher at <a href="https://www.jpmorgan.com">JP Morgan Chase & Co</a>, London, UK.</p>
+            <p>I am a Senior Associate AI Researcher at <a href="https://www.jpmorgan.com">J.P.Morgan Chase & Co</a>, London, UK.</p>
 
             <p>I am also a PhD candidate at <a href="http://crest.cs.ucl.ac.uk/about" target="_blank">CREST</a> centre, in the <a
                     href="http://www.cs.ucl.ac.uk/home/" target="_blank"> Department of Computer Science</a>, at<a
@@ -40,10 +40,10 @@
         <!--<header class="major2">-->
         <!--    <h2>before that,</h2>-->
         <!--</header>-->
-        <div class="myindent">
+        <!--<div class="myindent">
             <p>I did my Masters' in Software Engineering at Tarbiat Modares University, and worked as a Software Developer in industry for more than 7 years. [Expanded CV <a href="#" id="openAll">&#9660</a> ]
             </p>
-        </div>
+        </div> -->
     </section>
     <section id="two">
         <div class="myindent">
@@ -231,7 +231,7 @@
                 <!-- collapsible -->
                 <div class="page_collapsible collapse-open" id="body-section3">Work Experience<span></span></div>
                 <div class="container">
-                    <h4 class="uniname"><a href="https://www.jpmorgan.com/technology/artificial-intelligence" target="_blank">JP Morgan Chase & Co</a>, London,
+                    <h4 class="uniname"><a href="https://www.jpmorgan.com/technology/artificial-intelligence" target="_blank">J.P.Morgan Chase & Co</a>, London,
                         UK<span>since Sep. 2022</span>
                     </h4>
                     <div class="contentItem">
@@ -265,8 +265,8 @@
                 <ul class="labeled-icons">
                     <li>
                         <h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-                        <a href="#">vali.tawosi [at] jpmorgan [dot] com</a>
-                        <br>
+                        <!-- <a href="#">vali.tawosi [at] jpmorgan [dot] com</a> -->
+                        <!-- <br> -->
                         <a href="#">vali.tawosi [at] ucl [dot] ac [dot] uk</a>
                     </li>
                 </ul>
