--- a/index.html
+++ b/index.html
@@ -26,15 +26,13 @@
         <!--    <h2>On January 2019,</h2>-->
         <!--</header>-->
         <div class="myindent">
-            <p>I am a Senior Associate AI Researcher at <a href="https://www.jpmorgan.com">J.P.Morgan Chase & Co</a>, London, UK.</p>
+            <p>I am a Senior Associate AI Researcher at <a href="https://www.jpmorgan.com/technology/artificial-intelligence">J.P.Morgan Chase & Co</a>, London, UK.<br>
+            My Research at J.P.Morgan involves the use of AI for Software Engineering. </p>
 
-            <p>I am also a PhD candidate at <a href="http://crest.cs.ucl.ac.uk/about" target="_blank">CREST</a> centre, in the <a
+            <p>I have done my PhD at the <a
                     href="http://www.cs.ucl.ac.uk/home/" target="_blank"> Department of Computer Science</a>, at<a
                     href="http://www.ucl.ac.uk" target="_blank"> University College London</a>.
-                <br>As a member of the <a href="https://solar.cs.ucl.ac.uk/">SOLAR</a> team, under the supervision of <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/" target="_blank"> Professor
-                    Federica Sarro</a>
-                and <a href="http://www0.cs.ucl.ac.uk/staff/M.Harman/" target="_blank"> Professor Mark Harman</a>, I 
-                worked on Predictive Models for Software Analysis and Search-Based Software Engineering with a focus on Software Effort Estimation and Agile Methods.
+                <br>During my PhD I worked on Predictive Models for Software Analysis and Search-Based Software Engineering with a focus on Software Effort Estimation and Agile Methods. 
             </p>
         </div>
         <!--<header class="major2">-->
@@ -265,9 +263,9 @@
                 <ul class="labeled-icons">
                     <li>
                         <h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-                        <!-- <a href="#">vali.tawosi [at] jpmorgan [dot] com</a> -->
+                        vali.tawosi [at] jpmorgan [dot] com
                         <!-- <br> -->
-                        <a href="#">vali.tawosi [at] ucl [dot] ac [dot] uk</a>
+                        <!-- <a href="#">vali.tawosi [at] ucl [dot] ac [dot] uk</a> -->
                     </li>
                 </ul>
             <!--     <div class="mapframe">
