update papers and thesis

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             My Research at J.P.Morgan involves the use of AI for Software Engineering. </p>
 
             <p>I have done my PhD at the Department of Computer Science, at<a href="http://www.ucl.ac.uk" target="_blank"> University College London</a>.
-                <br>During my PhD I worked on Predictive Models for Software Analysis and Search-Based Software Engineering with a focus on Software Effort Estimation and Agile Methods. 
+                <br>During my PhD I worked on Predictive Models for Software Analysis and Search-Based Software Engineering, with a focus on Software Effort Estimation and Agile Methods. 
             </p>
         </div>
         <!--<header class="major2">-->
@@ -57,7 +57,7 @@
                         <div class="h3"><a href="http://www.cs.ucl.ac.uk/home/" target="_blank">Department of
                             Computer Science</a></div>
                         <div class="h3">PhD, Software Engineering</div>
-                        <div class="h4">Thesis: <I>"Predictiveness and Effectiveness of Story Points in Agile Software Development"</I></div>
+                        <div class="h4">Thesis: <I><a href="https://discovery.ucl.ac.uk/id/eprint/10175111/">"Predictiveness and Effectiveness of Story Points in Agile Software Development"</a></I></div>
                         <div class="h3">
                             <ul>
                                 <li><a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/" target="_blank"> Prof. Federica
@@ -104,6 +104,20 @@
                 <div class="page_collapsible collapse-open" id="body-section2">Publication<span></span></div>
                 <div class="container">
                     <div class="h3">
+                        <h4 class="uniname">2023</h4>
+                        <div class="contentItem">
+                            <ul>
+                                <li>
+                                    <!-- <a href="https://ieeexplore.ieee.org/document/9984979" target="_blank"> -->
+                                       "Search-Based Optimisation of LLM Learning Shots for Story Point Estimation"
+                                   <!-- </a> -->
+                                    <a href="files/SB_LLM_Shot_optimisation.pdf" Target="_blank"> (PrePrint &#10515;)</a>
+                                       with Salwa Alamir,
+                                       and Xiaomo Liu,
+                                        <i> to appear in the 15th Symposium of Search Based Software Engineering (SSBSE)</i>, 2023.
+                                </li>
+                            </ul>
+                        </div>
                         <h4 class="uniname">2022</h4>
                         <div class="contentItem">
                             <ul>
