--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="inner">
         <a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""/></a>
         <h1><strong><span style="font-size: 100px">Vali<br> Tawosi</span></strong><br/>
-            AI Researcher <br><a href="https://www.jpmorgan.com/technology/artificial-intelligence">@J.P.Morgan Chase & Co</a></h1>
+            AI Research Lead <br><a href="https://www.jpmorgan.com/technology/artificial-intelligence">@J.P.Morgan Chase & Co</a></h1>
     </div>
 </header>
 
@@ -26,7 +26,7 @@
         <!--    <h2>On January 2019,</h2>-->
         <!--</header>-->
         <div class="myindent">
-            <p>I am a Senior Associate AI Researcher at <a href="https://www.jpmorgan.com/technology/artificial-intelligence">J.P.Morgan Chase & Co</a>, London, UK.<br>
+            <p>I am a AI Research Lead at <a href="https://www.jpmorgan.com/technology/artificial-intelligence">J.P.Morgan Chase & Co</a>, London, UK.<br>
             My Research at J.P.Morgan involves the use of AI for Software Engineering. </p>
 
             <p>I have done my PhD at the Department of Computer Science, at<a href="http://www.ucl.ac.uk" target="_blank"> University College London</a>.
