--- a/index.html
+++ b/index.html
@@ -104,17 +104,41 @@
                 <div class="page_collapsible collapse-open" id="body-section2">Publication<span></span></div>
                 <div class="container">
                     <div class="h3">
-                        <h4 class="uniname">2023</h4>
+                        <h4 class="uniname">2024</h4>
                         <div class="contentItem">
                             <ul>
                                 <li>
                                     <!-- <a href="https://ieeexplore.ieee.org/document/9984979" target="_blank"> -->
-                                       "Search-Based Optimisation of LLM Learning Shots for Story Point Estimation"
+                                       "Software Vulnerability and Functionality Assessment using Large Language Models",
                                    <!-- </a> -->
+                                    <!-- <a href="files/SB_LLM_Shot_optimisation.pdf" Target="_blank"> (PrePrint &#10515;)</a> -->
+                                       with Rasmus Ingemann Tuffveson Jensen,
+                                       and Salwa Alamir,
+                                        <i> to appear in the 3rd International Workshop on NL-based Software Engineering (NLBSE)</i>, 2024.
+                                </li>
+                                <li>
+                                    <!-- <a href="https://ieeexplore.ieee.org/document/9984979" target="_blank"> -->
+                                       "Agile Effort Estimation: Have We Solved the Problem Yet? Insights From the Replication of the GPT2SP Study",
+                                   <!-- </a> -->
+                                    <!-- <a href="files/SB_LLM_Shot_optimisation.pdf" Target="_blank"> (PrePrint &#10515;)</a> -->
+                                       with <a href="http://www0.cs.ucl.ac.uk/people/R.Moussa.html"
+                                            target="_blank">Rebecca Moussa</a>,
+                                       and <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/"
+                                            target="_blank">Federica Sarro</a>,
+                                        <i> to appear in the 31st The IEEE International Conference on Software Analysis, Evolution and Reengineering (SANER)</i>, 2024.
+                                </li>
+                            </ul>
+                        </div><h4 class="uniname">2023</h4>
+                        <div class="contentItem">
+                            <ul>
+                                <li>
+                                    <a href="https://link.springer.com/chapter/10.1007/978-3-031-48796-5_9" target="_blank">
+                                       "Search-Based Optimisation of LLM Learning Shots for Story Point Estimation"
+                                   </a>
                                     <a href="files/SB_LLM_Shot_optimisation.pdf" Target="_blank"> (PrePrint &#10515;)</a>
                                        with Salwa Alamir,
                                        and Xiaomo Liu,
-                                        <i> to appear in the 15th Symposium of Search Based Software Engineering (SSBSE)</i>, 2023.
+                                        <i> in the 15th Symposium of Search Based Software Engineering (SSBSE)</i>, 2023.
                                 </li>
                             </ul>
                         </div>
@@ -245,10 +269,11 @@
                         UK<span>since Sep. 2022</span>
                     </h4>
                     <div class="contentItem">
-                        <div class="h3">Senior Associate AI Researcher</div>
+                        <div class="h3">Vice President AI Researchr<span>since Jan. 2024</span></div>
+                        <div class="h3">Senior Associate AI Researcher<span>Sep. 2022 to Dec. 2023</span></div>
                     </div>
                     <h4 class="uniname"><a href="http://www.navaco.ir" target="_blank">Navaco</a>, Tehran,
-                        Iran<span>Jun. 2017 to Dec. 2018</span>
+                        Iran<span style="float: right;">Jun. 2017 to Dec. 2018</span>
                     </h4>
                     <div class="contentItem">
                         <div class="h3">Software Designer and Senior JavaEE developer</div>
