--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         UK<span>since Sep. 2022</span>
                     </h4>
                     <div class="contentItem">
-                        <div class="h3">Vice President AI Researchr<span>since Jan. 2024</span></div>
+                        <div class="h3">Vice President AI Researcher<span>since Jan. 2024</span></div>
                         <div class="h3">Senior Associate AI Researcher<span>Sep. 2022 to Dec. 2023</span></div>
                     </div>
                     <h4 class="uniname"><a href="http://www.navaco.ir" target="_blank">Navaco</a>, Tehran,
