--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="inner">
         <a href="#" class="image avatar"><img src="images/avatar.jpg" alt=""/></a>
         <h1><strong><span style="font-size: 100px">Vali<br> Tawosi</span></strong><br/>
-            AI Research Lead <br><a href="https://www.jpmorgan.com/technology/artificial-intelligence">@J.P.Morgan Chase & Co</a></h1>
+            AI Research Lead<br><a href="https://www.jpmorgan.com/technology/artificial-intelligence">@J.P.Morgan Chase & Co</a></h1>
     </div>
 </header>
 
@@ -29,7 +29,7 @@
             <p>I am a AI Research Lead at <a href="https://www.jpmorgan.com/technology/artificial-intelligence">J.P.Morgan Chase & Co</a>, London, UK.<br>
             My Research at J.P.Morgan involves the use of AI for Software Engineering. </p>
 
-            <p>I have done my PhD at the Department of Computer Science, at<a href="http://www.ucl.ac.uk" target="_blank"> University College London</a>.
+            <p>I have received my PhD from the Department of Computer Science, at<a href="http://www.ucl.ac.uk" target="_blank"> University College London</a>.
                 <br>During my PhD I worked on Predictive Models for Software Analysis and Search-Based Software Engineering, with a focus on Software Effort Estimation and Agile Methods. 
             </p>
         </div>
@@ -40,66 +40,49 @@
             <p>I did my Masters' in Software Engineering at Tarbiat Modares University, and worked as a Software Developer in industry for more than 7 years. [Expanded CV <a href="#" id="openAll">&#9660</a> ]
             </p>
         </div> -->
-    </section>
-    <section id="two">
+    </section> 
+    <section id="three">
         <div class="myindent">
 
             <div class="openCloseAll">
                 <a href="#" id="closeAll" title="Close all">&#9650</a> | <a href="#" id="openAlll" title="Open All">&#9660</a>
             </div>
             <div id="content">
-                <!-- collapsible -->
-                <div class="page_collapsible collapse-open" id="body-section1">Education<span></span></div>
-                <div class="container">
-                    <h4 class="uniname"><a href="http://www.ucl.ac.uk" target="_blank">University College London</a>,
-                        London, UK <span>May 2023</span></h4>
-                    <div class="contentItem">
-                        <div class="h3"><a href="http://www.cs.ucl.ac.uk/home/" target="_blank">Department of
-                            Computer Science</a></div>
-                        <div class="h3">PhD, Software Engineering</div>
-                        <div class="h4">Thesis: <I><a href="https://discovery.ucl.ac.uk/id/eprint/10175111/">"Predictiveness and Effectiveness of Story Points in Agile Software Development"</a></I></div>
-                        <div class="h3">
-                            <ul>
-                                <li><a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/" target="_blank"> Prof. Federica
-                                    Sarro</a> (Supervisor)
-                                </li>
-                                <li><a href="http://www0.cs.ucl.ac.uk/staff/M.Harman/" target="_blank">Prof. Mark
-                                    Harman</a> (Secondary Supervisor)
-                                </li>
-                            </ul>
+                <div class="page_collapsible collapse-open" style="color: orange;" id="news">News<span></span></div>
+                    <div class="container" id="news_section">
+                        <div class="news">
+                            <div class="news-date">2024 - April, 16th</div>
+                            <div class="news-content">We will host the <a href="https://finanse24.github.io/" target="_blank">1st FinanSE Workshop</a> in Lisbon Portugal, co-located with ICSE 2024!</div>
+                        </div>
+                        <div class="news">
+                            <div class="news-date" >2024 - March</div>
+                            <div class="news-content">I have joined <a href="https://conf.researchr.org/track/ssbse-2023/ssbse-2023-challenge?#Call-for-Challenge-Solutions" target="_blank">SSBSE'24 Challenge Track</a> Program Committee!</div>
+                        </div>
+                        <div class="news">
+                            <div class="news-date" >2024 - January</div>
+                            <div class="news-content">Our paper titled <a href="https://arxiv.org/abs/2403.08429" target="_blank">"Software Vulnerability and Functionality Assessment using Large Language Models"</a> got accepted in NLBSE'2024 Workshop, colocated with ICSE 2024!</div>
+                        </div>
+                        <div class="news">
+                            <div class="news-date" >2023 - December</div>
+                            <div class="news-content">Our paper titled <a href="files/GPT2SP_Replication_Study.pdf" target="_blank">"Agile Effort Estimation: Have We Solved the Problem Yet? Insights From the Replication of the GPT2SP Study"</a> got accepted in SANER'2024 RENE track!</div>
+                        </div>
+                        <div class="news">
+                            <div class="news-date" >2023 - September</div>
+                            <div class="news-content">Our paper titled <a href="https://link.springer.com/chapter/10.1007/978-3-031-48796-5_9" target="_blank">"Search-Based Optimisation of LLM Learning Shots for Story Point Estimation"</a> got accepted in SSBSE'2023 NIER track!</div>
+                        </div>
+                        <div class="news">
+                            <div class="news-date" >2023 - September</div>
+                            <div class="news-content">Our submission to host the <a href="https://finanse24.github.io/" target="_blank">1st FinanSE workshop</a> at ICSE 2024 got accepted!</div>
+                        </div>
+                        <div class="news">
+                            <div class="news-date" >2023 - July</div>
+                            <div class="news-content">I have joined <a href="https://conf.researchr.org/track/saner-2024/saner-2024-papers?" target="_blank">SANER'24 Research Track</a> Program Committee!</div> 
+                        </div>
+                        <div class="news">
+                            <div class="news-date" >2023 - June</div>
+                            <div class="news-content">I will co-chair the <a href="https://conf.researchr.org/track/ssbse-2023/ssbse-2023-challenge?#Call-for-Challenge-Solutions" target="_blank">SSBSE'23 Challenge Track</a>, co-located with ESEC/FSE 2023!</div>
                         </div>
                     </div>
-                    <h4 class="uniname"><a href="http://en.modares.ac.ir" target="_blank"> Tarbiat Modares
-                        University</a>, Tehran, Iran <span>Nov. 2013</span></h4>
-                    <div class="contentItem">
-                        <div class="h3">Electrical and Computer Engineering Department</div>
-                        <div class="h3">M.Sc., Software Engineering</div>
-                        <div class="h4">Thesis: <I>"Automated Software Design Using Ant Colony
-                            Optimization"</I></div>
-                        <!--<div class="h4"></div>-->
-                        <div class="h3">
-                            <ul>
-                                <li><a href="https://www.modares.ac.ir/~sjalili"
-                                       target="_blank">Dr. Saeed Jalili</a> (Supervisor)
-                                </li>
-                                <!--<li><a href="http://www.modares.ac.ir/~saniee" target="_blank">Dr. Mohammad Saniee-->
-                                <!--    Abadeh</a> (Advisor)-->
-                                <!--</li>-->
-                                <!--<li><a href="http://www.modares.ac.ir/?&fkeyid=&siteid=75&pageid=7401"-->
-                                <!--       target="_blank">Dr. Nasrollah Moghaddam Charkari</a></li>-->
-                                <!--<li><a href="http://sharif.ir/~jhabibi" target="_blank">Dr. Jafar Habibi</a></li>-->
-                            </ul>
-                        </div>
-                    </div>
-                    <h4 class="uniname"><a href="http://en.pnu.ac.ir" target="_blank"> Payam Noor University</a>,
-                        Bonab, Iran <span>Jun. 2009</span></h4>
-                    <div class="contentItem">
-                        <div class="h3">School of Basic Science</div>
-                        <div class="h3">B.Sc., Computer Science (Information System Analysis and Design)</div>
-                    </div>
-                    <div class="TwoEmSpace"></div>
-                </div>
-                <!-- end collapsible -->
                 <!-- collapsible -->
                 <div class="page_collapsible collapse-open" id="body-section2">Publication<span></span></div>
                 <div class="container">
@@ -111,7 +94,7 @@
                                     <!-- <a href="https://ieeexplore.ieee.org/document/9984979" target="_blank"> -->
                                        "Software Vulnerability and Functionality Assessment using Large Language Models",
                                    <!-- </a> -->
-                                    <!-- <a href="files/SB_LLM_Shot_optimisation.pdf" Target="_blank"> (PrePrint &#10515;)</a> -->
+                                    <a href="https://arxiv.org/abs/2403.08429" Target="_blank"> (PrePrint &#10515;)</a>
                                        with Rasmus Ingemann Tuffveson Jensen,
                                        and Salwa Alamir,
                                         <i> to appear in the 3rd International Workshop on NL-based Software Engineering (NLBSE)</i>, 2024.
@@ -263,6 +246,58 @@
                 </div>
                 <!-- end collapsible -->
                 <!-- collapsible -->
+                <div class="page_collapsible collapse-open" id="body-section1">Education<span></span></div>
+                <div class="container">
+                    <h4 class="uniname"><a href="http://www.ucl.ac.uk" target="_blank">University College London</a>,
+                        London, UK <span>May 2023</span></h4>
+                    <div class="contentItem">
+                        <div class="h3"><a href="http://www.cs.ucl.ac.uk/home/" target="_blank">Department of
+                            Computer Science</a></div>
+                        <div class="h3">PhD, Software Engineering</div>
+                        <div class="h4">Thesis: <I><a href="https://discovery.ucl.ac.uk/id/eprint/10175111/">"Predictiveness and Effectiveness of Story Points in Agile Software Development"</a></I></div>
+                        <div class="h3">
+                            <ul>
+                                <li><a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/" target="_blank"> Prof. Federica
+                                    Sarro</a> (Supervisor)
+                                </li>
+                                <li><a href="http://www0.cs.ucl.ac.uk/staff/M.Harman/" target="_blank">Prof. Mark
+                                    Harman</a> (Secondary Supervisor)
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h4 class="uniname"><a href="http://en.modares.ac.ir" target="_blank"> Tarbiat Modares
+                        University</a>, Tehran, Iran <span>Nov. 2013</span></h4>
+                    <div class="contentItem">
+                        <div class="h3">Electrical and Computer Engineering Department</div>
+                        <div class="h3">M.Sc., Software Engineering</div>
+                        <div class="h4">Thesis: <I>"Automated Software Design Using Ant Colony
+                            Optimization"</I></div>
+                        <!--<div class="h4"></div>-->
+                        <div class="h3">
+                            <ul>
+                                <li><a href="https://www.modares.ac.ir/~sjalili"
+                                       target="_blank">Dr. Saeed Jalili</a> (Supervisor)
+                                </li>
+                                <!--<li><a href="http://www.modares.ac.ir/~saniee" target="_blank">Dr. Mohammad Saniee-->
+                                <!--    Abadeh</a> (Advisor)-->
+                                <!--</li>-->
+                                <!--<li><a href="http://www.modares.ac.ir/?&fkeyid=&siteid=75&pageid=7401"-->
+                                <!--       target="_blank">Dr. Nasrollah Moghaddam Charkari</a></li>-->
+                                <!--<li><a href="http://sharif.ir/~jhabibi" target="_blank">Dr. Jafar Habibi</a></li>-->
+                            </ul>
+                        </div>
+                    </div>
+                    <h4 class="uniname"><a href="http://en.pnu.ac.ir" target="_blank"> Payam Noor University</a>,
+                        Bonab, Iran <span>Jun. 2009</span></h4>
+                    <div class="contentItem">
+                        <div class="h3">School of Basic Science</div>
+                        <div class="h3">B.Sc., Computer Science (Information System Analysis and Design)</div>
+                    </div>
+                    <div class="TwoEmSpace"></div>
+                </div>
+                <!-- end collapsible -->
+                <!-- collapsible -->
                 <div class="page_collapsible collapse-open" id="body-section3">Work Experience<span></span></div>
                 <div class="container">
                     <h4 class="uniname"><a href="https://www.jpmorgan.com/technology/artificial-intelligence" target="_blank">J.P.Morgan Chase & Co</a>, London,
@@ -293,7 +328,7 @@
     </section>
 
     <!-- Three -->
-    <section id="three">
+    <section id="four">
         <h2>Contact Information</h2>
         <div class="row">
              <div class="col-6 col-12-small "> 
@@ -360,7 +395,6 @@
 <script src="include/js/breakpoints.min.js"></script>
 <script src="include/js/util.js"></script>
 <script src="include/js/main.js"></script>
-<script src="include/js/jquery.collapsible.js"></script>
 <script src="include/js/myscript.js"></script>
 
 </body>
