Update index.html add finanse25 news

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                 <div class="page_collapsible collapse-open" style="color: orange;" id="news">News<span></span></div>
                     <div class="container" id="news_section">
                         <div class="news">
+                            <div class="news-date">2025 - April, 29th</div>
+                            <div class="news-content">We will host the <a href="https://conf.researchr.org/home/icse-2025/finanse-2025" target="_blank">2st FinanSE Workshop</a> in Ottawa Canada, co-located with ICSE 2025!</div>
+                        </div>
+                        <div class="news">
                             <div class="news-date">2024 - April, 16th</div>
                             <div class="news-content">We will host the <a href="https://finanse24.github.io/" target="_blank">1st FinanSE Workshop</a> in Lisbon Portugal, co-located with ICSE 2024!</div>
                         </div>
