--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
         <!--    <h2>On January 2019,</h2>-->
         <!--</header>-->
         <div class="myindent">
-            <p>I am a AI Research Lead at <a href="https://www.jpmorgan.com/technology/artificial-intelligence">J.P.Morgan Chase & Co</a>, London, UK.<br>
-            My Research at J.P.Morgan involves the use of AI for Software Engineering. </p>
+            <p>I am an AI Research Lead at <a href="https://www.jpmorgan.com/technology/artificial-intelligence">J.P. Morgan Chase</a>, London, UK.<br>
+            My Research at J.P. Morgan involves the use of AI for Software Engineering. </p>
 
-            <p>I have received my PhD from the Department of Computer Science, at<a href="http://www.ucl.ac.uk" target="_blank"> University College London</a>.
-                <br>During my PhD I worked on Predictive Models for Software Analysis and Search-Based Software Engineering, with a focus on Software Effort Estimation and Agile Methods. 
+            <p>I received my PhD from the Department of Computer Science, at <a href="http://www.ucl.ac.uk" target="_blank">University College London</a>.
+                <br>During my PhD I worked on Predictive Models for Software Analysis and Search-Based Software Engineering, focusing on Software Effort Estimation and Agile Methods. 
             </p>
         </div>
         <!--<header class="major2">-->
         <!--    <h2>before that,</h2>-->
         <!--</header>-->
         <!--<div class="myindent">
-            <p>I did my Masters' in Software Engineering at Tarbiat Modares University, and worked as a Software Developer in industry for more than 7 years. [Expanded CV <a href="#" id="openAll">&#9660</a> ]
+            <p>I did my MSc in Software Engineering at Tarbiat Modares University and worked as a Software Developer in the industry for more than 7 years. [Expanded CV <a href="#" id="openAll">&#9660</a> ]
             </p>
         </div> -->
     </section> 
@@ -53,6 +53,10 @@
                         <div class="news">
                             <div class="news-date">2025 - April, 29th</div>
                             <div class="news-content">We will host the <a href="https://conf.researchr.org/home/icse-2025/finanse-2025" target="_blank">2st FinanSE Workshop</a> in Ottawa Canada, co-located with ICSE 2025!</div>
+                        </div>
+                        <div class="news">
+                            <div class="news-date" >2024 - September</div>
+                            <div class="news-content">I have joined <a href="https://conf.researchr.org/track/saner-2025/saner-2025-papers#Call-for-Papers" target="_blank">SANER'25 Research Track</a> Program Committee!</div>
                         </div>
                         <div class="news">
                             <div class="news-date">2024 - April, 16th</div>
@@ -191,7 +195,7 @@
                                             target="_blank">Federica Sarro</a>, Alessio Petrozziello, and <a
                                         href="http://www0.cs.ucl.ac.uk/staff/M.Harman/"
                                         target="_blank">Mark Harman</a>,
-                                    <i>IEEE Transactions on Software Engineerng (TSE)</i>, vol. 48, no. 8, 2022, pp 3185-3205.
+                                    <i>IEEE Transactions on Software Engineering (TSE)</i>, vol. 48, no. 8, 2022, pp 3185-3205.
                                 </li>
                             </ul>
                         </div>
@@ -239,7 +243,7 @@
                                 <li>
                                     <a href="https://ieeexplore.ieee.org/document/6111010"
                                        target="_blank">"AAMA: A new Authentication and Authorization architecture for
-                                        modular information systems, a robust object oriented Approach." </a>
+                                        modular information systems, a robust object-oriented Approach." </a>
                                     with <a href="https://scholar.google.com/citations?user=JCyZ3uEAAAAJ&amp;hl=en"
                                             target="_blank">GholamAli N. H. Irani</a>
                                     <i>in the 5th IEEE International Conference on Application of Information and Communication Technologies (AICT) 2011</i>, 2011, pp 1-5.
@@ -283,12 +287,6 @@
                                 <li><a href="https://www.modares.ac.ir/~sjalili"
                                        target="_blank">Dr. Saeed Jalili</a> (Supervisor)
                                 </li>
-                                <!--<li><a href="http://www.modares.ac.ir/~saniee" target="_blank">Dr. Mohammad Saniee-->
-                                <!--    Abadeh</a> (Advisor)-->
-                                <!--</li>-->
-                                <!--<li><a href="http://www.modares.ac.ir/?&fkeyid=&siteid=75&pageid=7401"-->
-                                <!--       target="_blank">Dr. Nasrollah Moghaddam Charkari</a></li>-->
-                                <!--<li><a href="http://sharif.ir/~jhabibi" target="_blank">Dr. Jafar Habibi</a></li>-->
                             </ul>
                         </div>
                     </div>
@@ -304,7 +302,7 @@
                 <!-- collapsible -->
                 <div class="page_collapsible collapse-open" id="body-section3">Work Experience<span></span></div>
                 <div class="container">
-                    <h4 class="uniname"><a href="https://www.jpmorgan.com/technology/artificial-intelligence" target="_blank">J.P.Morgan Chase & Co</a>, London,
+                    <h4 class="uniname"><a href="https://www.jpmorgan.com/technology/artificial-intelligence" target="_blank">J.P. Morgan Chase</a>, London,
                         UK<span>since Sep. 2022</span>
                     </h4>
                     <div class="contentItem">
@@ -340,15 +338,8 @@
                     <li>
                         <h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
                         vali.tawosi [at] jpmorgan [dot] com
-                        <!-- <br> -->
-                        <!-- <a href="#">vali.tawosi [at] ucl [dot] ac [dot] uk</a> -->
                     </li>
                 </ul>
-            <!--     <div class="mapframe">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.5559521491364!2d-0.022895084230183025!3d51.50301567963442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761cab43ba98af%3A0x7901d4ddebf1e959!2sJP%20Morgan%20HQ!5e0!3m2!1sen!2suk!4v1671302239733!5m2!1sen!2suk"  width="100%" height="100%" max-width="100%" frameborder="0"></iframe>
-                   <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d155.1548430228028!2d-0.13223479571819352!3d51.52280144699664!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b519f4f3e1b%3A0x2c68a3ed8c90ca92!2sUCL%20Engineering%20Front%20Building!5e0!3m2!1sen!2suk!4v1634251985624!5m2!1sen!2suk"
-                            width="100%" height="100%" max-width="100%" frameborder="0"></iframe>
-                </div>-->
              </div>
             <div class="col-6 col-12-small">
                 <ul class="labeled-icons">
